--- a/lab2_mvc/views/dashboard.ejs
+++ b/lab2_mvc/views/dashboard.ejs
@@ -1,16 +1,15 @@
 <%- include('layout.ejs'); %>
 <div class="container">
     <div class="row justify-content-center">
-
-        <h3>My name is <%= user.name %> </h3> &nbsp;
-        <h3>I stay at <%= user.location %> </h3> <br>
-
+        <div class="col-12">
+            <h3>My name is <%= user.name %>. I stay at <%= user.location %></h3>
+        </div>
+        <div class="col-12">
+            <a href="/logout">
+                <button type="submit" class="w-auto btn btn-primary btn-lg btn-block login-button">Logout</button>
+            </a>
+        </div>
     </div>
 </div>
-<div>
-    <a href="/logout"> <button type="submit" class="btn btn-primary btn-lg btn-block login-button">Logout</button> </a>
-</div>
-
 </body>
-
 </html>
